theory/week_04/day1/lab_scripts/lab1/manifests/microservices/microservices-nodeport.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: product-service-nodeport
  namespace: ecommerce
spec:
  type: NodePort
  selector:
    app: product-service
  ports:
  - port: 80
    targetPort: 80
    nodePort: 30081
    protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: order-service-nodeport
  namespace: ecommerce
spec:
  type: NodePort
  selector:
    app: order-service
  ports:
  - port: 80
    targetPort: 80
    nodePort: 30082
    protocol: TCP
